--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>Triggui — Abre un libro físico. Aquí y ahora.</title>
 
+<!-- Open Graph / Twitter preview -->
 <meta property="og:title" content="Abre. Un Libro. Físico.">
 <meta property="og:description" content="Toma un libro físico que tengas cerca, ábrelo en cualquier parte, lee la primera línea que veas.">
 <meta property="og:image" content="https://triggui.com/imagotipo.png">
 <meta property="og:url" content="https://triggui.com">
 <meta property="og:type" content="website">
-
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Triggui – Abre un libro físico. Aquí y ahora.">
 <meta name="twitter:description" content="Un impulso real. Nada más. Nada menos.">
@@ -36,8 +36,7 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 .block::before{content:"";position:absolute;inset:0;border-radius:inherit;background:linear-gradient(180deg,rgba(255,255,255,.18),transparent 65%);mix-blend-mode:overlay}
 .label,.frase{z-index:2;text-align:center;color:inherit}
 .frase{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;padding:1rem;opacity:0;transition:opacity .25s}
-.block.show .label{opacity:0}
-.block.show .frase{opacity:1}
+.block.show .label{opacity:0}.block.show .frase{opacity:1}
 
 /* Portada */
 .portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;flex-direction:column;padding:1rem;gap:.4rem;text-align:center;animation:pop .6s ease-out forwards;max-height:90%;overflow:hidden}
@@ -51,13 +50,21 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 .port-text p{font-size:clamp(1.5rem,4vw,2.2rem);font-weight:600;opacity:.9;margin-top:.3rem}
 .emoji-big{font-size:clamp(1.6rem,5vw,2.8rem);filter:drop-shadow(0 4px 8px rgba(0,0,0,.3))}
 
-/* CTA */
-.cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);z-index:100;display:flex;flex-wrap:wrap;gap:1rem;justify-content:center;max-width:480px;width:clamp(280px,92vw,480px)}
-.cta button{flex:1 1 calc(50% - .5rem);min-width:120px;min-height:3.1rem;display:flex;align-items:center;justify-content:center;border:none;padding:.75rem 1rem;border-radius:999px;font-size:.9rem;font-weight:600;font-family:'Archivo',sans-serif;cursor:pointer;transition:all .25s ease;box-shadow:0 4px 12px rgba(0,0,0,.12);letter-spacing:.3px;white-space:normal;text-align:center}
+/* CTA (aparece tras revelar) */
+.cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);z-index:100;display:none;gap:1rem;justify-content:center;width:clamp(280px,88vw,420px)}
+.cta button{flex:1 1 0;display:flex;align-items:center;justify-content:center;border:none;padding:.75rem 1rem;border-radius:999px;font-size:.9rem;font-weight:600;font-family:'Archivo',sans-serif;cursor:pointer;transition:all .25s ease;box-shadow:0 4px 12px rgba(0,0,0,.12);letter-spacing:.3px;background-size:200% 200%;white-space:nowrap;text-align:center}
 #otro{background:linear-gradient(135deg,#5fbfff,#1e90ff);color:#fff}
 #fisico{background:linear-gradient(135deg,#b2f8c8,#42d97c);color:#0c2d1b}
 .cta button:hover{filter:brightness(1.15);transform:translateY(-1px)}
-@media(max-width:380px){.cta button{flex:1 1 100%}}
+
+/* Icon/text separation + mobile circular mode */
+.cta .icon{margin-right:.4rem;font-size:1.05em;line-height:0}
+@media(max-width:480px){
+  .cta{gap:.8rem;width:auto}
+  .cta button{flex:0 0 auto;width:3.6rem;height:3.6rem;padding:0;border-radius:50%;min-width:0;font-size:1.6rem}
+  .cta .text{display:none}
+  .cta .icon{margin:0}
+}
 
 /* Celebración */
 .cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;align-items:center;justify-content:center;z-index:110}
@@ -70,12 +77,20 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 <div class="intro">Elige la palabra que quieras y encuentra un libro.</div>
 <div class="grid" id="grid"></div>
 
-<div class="cta" id="cta">
-  <button id="otro">💖 Me gusta quiero donar</button>
-  <button id="fisico">📖 Abrí un libro físico</button>
+<!-- CTA (botones) -->
+<div class="cta" id="cta" aria-hidden="true">
+  <button id="otro">
+    <span class="icon">💖</span><span class="text">Me gusta quiero donar</span>
+  </button>
+  <button id="fisico">
+    <span class="icon">📖</span><span class="text">Abrí un libro físico</span>
+  </button>
 </div>
 
-<div class="cele" id="cele"><div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div></div>
+<!-- Celebración -->
+<div class="cele" id="cele">
+  <div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div>
+</div>
 
 <script>
 const grid=document.getElementById("grid"),
@@ -92,14 +107,9 @@ const portIdx=Math.floor(Math.random()*4),
       grad=i=>`linear-gradient(135deg,${libro.colores[i]},${libro.colores[(i+1)%4]})`;
 
 function adjustScale(wrap){
-  const parent=wrap.closest(".portada");
-  const available=parent.clientHeight-40;
-  let scale=1;
-  wrap.style.transform="scale(1)";
-  while(wrap.scrollHeight>available&&scale>0.55){
-    scale-=0.02;
-    wrap.style.transform=`scale(${scale})`;
-  }
+  const parent=wrap.closest(".portada");if(!parent)return;
+  const avail=parent.clientHeight-40;let scale=1;wrap.style.transform="scale(1)";
+  while(wrap.scrollHeight>avail&&scale>0.55){scale-=.02;wrap.style.transform=`scale(${scale})`}
 }
 
 function buildPort(i){
@@ -118,42 +128,40 @@ function render(){
   grid.innerHTML="";
   for(let i=0;i<4;i++){
     const card=document.createElement("div");
-    card.className="block";card.dataset.i=i;card.style.background=grad(i);
-    const label=document.createElement("div");
-    label.className="label";label.textContent=`${emojis[i%emojis.length]} ${libro.palabras[i]}`;
+    card.className="block";card.style.background=grad(i);
+    const label=document.createElement("div");label.className="label";
+    label.textContent=`${emojis[i%emojis.length]} ${libro.palabras[i]}`;
     label.style.color=libro.textColors?.[i]||"#fff";
-    const frase=document.createElement("div");
-    frase.className="frase";frase.textContent=libro.frases[i];
-    frase.style.color=libro.textColors?.[i]||"#fff";
+    const frase=document.createElement("div");frase.className="frase";
+    frase.textContent=libro.frases[i];frase.style.color=libro.textColors?.[i]||"#fff";
     const port=buildPort(i);
     if(i===portIdx)card.append(port);
     card.append(label,frase);
-    card.onclick=()=>handleClick(card,i,port,label);
+    card.onclick=()=>handle(card,i,port,label);
     grid.append(card);
   }
 }
 
-function handleClick(card,i,port,label){
+function handle(card,i,port,label){
   if(revealed){location.reload();return;}
   if(i===portIdx){
     label.style.display="none";port.style.display="flex";
     [...grid.children].forEach((c,j)=>j!==portIdx&&c.classList.add("show"));
-    cta.style.display="flex";revealed=true;
+    cta.style.display="flex";cta.removeAttribute("aria-hidden");revealed=true;
   }else{card.classList.toggle("show");}
 }
 
 btnOtro.onclick=()=>window.open("https://donate.stripe.com/eVqaEX1JD9oB0yE55H0oM03","_blank");
 
 btnLibro.onclick=async()=>{
-  btnLibro.disabled=true;
-  cele.style.display="flex";
+  btnLibro.disabled=true;cele.style.display="flex";
   celeMsg.innerHTML='✨ <span class="num">...</span><br>libros físicos abiertos';
   try{
     const r=await fetch("https://triggui-api.vercel.app/api/increment");
     const d=await r.json();
     celeMsg.innerHTML=`✨ <span class="num">${d.total.toLocaleString("es-MX")}</span><br>libros físicos abiertos`;
   }catch{celeMsg.textContent="📚 Error al contar libros";}
-  setTimeout(()=>{cele.style.display="none";cta.style.display="flex";btnLibro.disabled=false;},2300);
+  setTimeout(()=>{cele.style.display="none";btnLibro.disabled=false},2300);
 };
 
 (async()=>{
