--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>Triggui — Abre un libro físico. Aquí y ahora.</title>
 
-<!-- Open Graph / Twitter preview -->
+<!-- OG / Twitter -->
 <meta property="og:title" content="Abre. Un Libro. Físico.">
 <meta property="og:description" content="Toma un libro físico que tengas cerca, ábrelo en cualquier parte, lee la primera línea que veas.">
 <meta property="og:image" content="https://triggui.com/imagotipo.png">
@@ -17,20 +17,26 @@
 <meta name="twitter:image" content="https://triggui.com/imagotipo.png">
 
 <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap" rel="stylesheet">
+
 <style>
+:root{
+  /* Diámetro de los botones: adapta de 4 rem (móvil) a 7 rem (desktop grande) */
+  --btnSize: clamp(4rem, 15vw, 7rem);
+}
+
 *{margin:0;padding:0;box-sizing:border-box}
 html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:#fff;-webkit-overflow-scrolling:touch}
 
-/* Intro */
+/* ---------------- Intro ---------------- */
 .intro{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);padding:2.2rem 2.8rem;background:#191e32;border-radius:24px;z-index:120;font-family:'Poppins';font-size:2rem;font-weight:700;text-align:center;box-shadow:0 0 16px rgba(48,255,228,.32);animation:introHide 2.2s 1s forwards}
 @keyframes introHide{to{opacity:0;visibility:hidden;transform:translate(-50%,-80%)}}
 
-/* Grid */
+/* ---------------- Grid ---------------- */
 .grid{position:absolute;inset:5vh 1.5vw;display:grid;gap:1vw}
 @media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr)}}
 @media(orientation:portrait){.grid{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}}
 
-/* Blocks */
+/* ---------------- Blocks ---------------- */
 .block{position:relative;display:flex;align-items:center;justify-content:center;padding:1rem;border-radius:22px;font-weight:700;cursor:pointer;background-size:320% 320%;transition:background-position 4s;overflow:hidden}
 .block:hover{background-position:100% 100%}
 .block::before{content:"";position:absolute;inset:0;border-radius:inherit;background:linear-gradient(180deg,rgba(255,255,255,.18),transparent 65%);mix-blend-mode:overlay}
@@ -38,35 +44,36 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 .frase{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;padding:1rem;opacity:0;transition:opacity .25s}
 .block.show .label{opacity:0}.block.show .frase{opacity:1}
 
-/* Portada */
+/* ---------------- Portada ---------------- */
 .portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;flex-direction:column;padding:1rem;gap:.4rem;text-align:center;animation:pop .6s ease-out forwards;max-height:90%;overflow:hidden}
 @keyframes pop{0%{transform:scale(.8);opacity:0}100%{transform:scale(1);opacity:1}}
 .portada img{max-width:94%;max-height:76%;border-radius:18px;box-shadow:0 12px 32px rgba(0,0,0,.55)}
 
-/* Portada text */
 .port-text h2,.port-text p,.emoji-big{animation:settle .6s ease-out forwards;opacity:0}
 @keyframes settle{0%{transform:scale(1.25);opacity:0}100%{transform:scale(1);opacity:1}}
 .port-text h2{font-size:clamp(2.8rem,7vw,4rem);font-weight:800;line-height:1.15;text-shadow:0 2px 6px rgba(0,0,0,.35)}
 .port-text p{font-size:clamp(1.5rem,4vw,2.2rem);font-weight:600;opacity:.9;margin-top:.3rem}
 .emoji-big{font-size:clamp(1.6rem,5vw,2.8rem);filter:drop-shadow(0 4px 8px rgba(0,0,0,.3))}
 
-/* CTA (aparece tras revelar) */
-.cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);z-index:100;display:none;gap:1rem;justify-content:center;width:clamp(280px,88vw,420px)}
-.cta button{flex:1 1 0;display:flex;align-items:center;justify-content:center;border:none;padding:.75rem 1rem;border-radius:999px;font-size:.9rem;font-weight:600;font-family:'Archivo',sans-serif;cursor:pointer;transition:all .25s ease;box-shadow:0 4px 12px rgba(0,0,0,.12);letter-spacing:.3px;background-size:200% 200%;white-space:nowrap;text-align:center}
+/* ---------------- CTA Buttons ---------------- */
+.cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);z-index:100;display:none;gap:1.2rem;justify-content:center;flex-wrap:wrap}
+
+.cta button{
+  width:var(--btnSize);height:var(--btnSize);flex:0 0 var(--btnSize);
+  border:none;border-radius:50%;padding:.65rem;
+  display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center;
+  font-family:'Archivo',sans-serif;font-weight:600;letter-spacing:.3px;
+  font-size:clamp(.58rem,2.2vw,.85rem);line-height:1.05;
+  cursor:pointer;background-size:200% 200%;transition:filter .25s,transform .25s;
+  box-shadow:0 4px 12px rgba(0,0,0,.12);white-space:pre-line;overflow:hidden
+}
+.cta button:hover{filter:brightness(1.15);transform:translateY(-2px)}
+
+.cta .icon{font-size:1.55rem;margin-bottom:.15rem;line-height:1}
 #otro{background:linear-gradient(135deg,#5fbfff,#1e90ff);color:#fff}
 #fisico{background:linear-gradient(135deg,#b2f8c8,#42d97c);color:#0c2d1b}
-.cta button:hover{filter:brightness(1.15);transform:translateY(-1px)}
 
-/* Icon/text separation + mobile circular mode */
-.cta .icon{margin-right:.4rem;font-size:1.05em;line-height:0}
-@media(max-width:480px){
-  .cta{gap:.8rem;width:auto}
-  .cta button{flex:0 0 auto;width:3.6rem;height:3.6rem;padding:0;border-radius:50%;min-width:0;font-size:1.6rem}
-  .cta .text{display:none}
-  .cta .icon{margin:0}
-}
-
-/* Celebración */
+/* ---------------- Celebración ---------------- */
 .cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;align-items:center;justify-content:center;z-index:110}
 .cele-msg{font-family:'Poppins';font-size:2rem;text-align:center;background:rgba(255,255,255,.05);padding:2rem 3rem;border-radius:20px}
 .num{color:#30ffe4;font-weight:900;font-size:2.8rem}
@@ -77,20 +84,20 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 <div class="intro">Elige la palabra que quieras y encuentra un libro.</div>
 <div class="grid" id="grid"></div>
 
-<!-- CTA (botones) -->
-<div class="cta" id="cta" aria-hidden="true">
+<!-- CTA (aparece tras revelar) -->
+<div class="cta" id="cta">
   <button id="otro">
-    <span class="icon">💖</span><span class="text">Me gusta quiero donar</span>
+    <span class="icon">💖</span>
+    <span class="txt">Me gusta<br>quiero donar</span>
   </button>
   <button id="fisico">
-    <span class="icon">📖</span><span class="text">Abrí un libro físico</span>
+    <span class="icon">📖</span>
+    <span class="txt">Abrí un<br>libro físico</span>
   </button>
 </div>
 
 <!-- Celebración -->
-<div class="cele" id="cele">
-  <div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div>
-</div>
+<div class="cele" id="cele"><div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div></div>
 
 <script>
 const grid=document.getElementById("grid"),
@@ -129,11 +136,12 @@ function render(){
   for(let i=0;i<4;i++){
     const card=document.createElement("div");
     card.className="block";card.style.background=grad(i);
-    const label=document.createElement("div");label.className="label";
-    label.textContent=`${emojis[i%emojis.length]} ${libro.palabras[i]}`;
+    const label=document.createElement("div");
+    label.className="label";label.textContent=`${emojis[i%emojis.length]} ${libro.palabras[i]}`;
     label.style.color=libro.textColors?.[i]||"#fff";
-    const frase=document.createElement("div");frase.className="frase";
-    frase.textContent=libro.frases[i];frase.style.color=libro.textColors?.[i]||"#fff";
+    const frase=document.createElement("div");
+    frase.className="frase";frase.textContent=libro.frases[i];
+    frase.style.color=libro.textColors?.[i]||"#fff";
     const port=buildPort(i);
     if(i===portIdx)card.append(port);
     card.append(label,frase);
@@ -147,8 +155,10 @@ function handle(card,i,port,label){
   if(i===portIdx){
     label.style.display="none";port.style.display="flex";
     [...grid.children].forEach((c,j)=>j!==portIdx&&c.classList.add("show"));
-    cta.style.display="flex";cta.removeAttribute("aria-hidden");revealed=true;
-  }else{card.classList.toggle("show");}
+    cta.style.display="flex";revealed=true;
+  }else{
+    card.classList.toggle("show");
+  }
 }
 
 btnOtro.onclick=()=>window.open("https://donate.stripe.com/eVqaEX1JD9oB0yE55H0oM03","_blank");
