--- a/public/index.html
+++ b/public/index.html
@@ -88,11 +88,11 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 <div class="cta" id="cta">
   <button id="otro">
     <span class="icon">💖</span>
-    <span class="txt">Me gusta<br>quiero donar</span>
+    <span class="txt">Me gusta<br>quiero<br>donar</span>
   </button>
   <button id="fisico">
     <span class="icon">📖</span>
-    <span class="txt">Abrí un<br>libro físico</span>
+    <span class="txt">Abrí un<br>libro<br>físico</span>
   </button>
 </div>
 
