--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,16 @@
 <meta name="twitter:description" content="Un impulso real. Nada más. Nada menos.">
 <meta name="twitter:image" content="https://triggui.com/imagotipo.png">
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CLK554FCNM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CLK554FCNM');
+</script>
+
 <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap" rel="stylesheet">
 
 <style>
