--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:#fff;-webkit-overflow-scrolling:touch}
 
 /* ---------------- Intro ---------------- */
-.intro{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);padding:2.2rem 2.8rem;background:#191e32;border-radius:24px;z-index:120;font-family:'Poppins';font-size:1.5rem;font-weight:600;text-align:center;box-shadow:0 0 16px rgba(48,255,228,.32);animation:introHide 2.2s 1s forwards}
+.intro{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);padding:2.2rem 2.8rem;background:#191e32;border-radius:24px;z-index:120;font-family:'Poppins';font-size:1.5rem;font-weight:600;text-align:center;box-shadow:0 0 16px rgba(48,255,228,.32);animation:introHide 3.2s 2s forwards}
 @keyframes introHide{to{opacity:0;visibility:hidden;transform:translate(-50%,-80%)}}
 
 /* ---------------- Grid ---------------- */
@@ -91,7 +91,7 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 </head>
 <body>
 
-<div class="intro">Elige la palabra que quieras y encuentra un libro.</div>
+<div class="intro">Invéntate tu propia frase con estas palabras antes de abrir.</div>
 <div class="grid" id="grid"></div>
 
 <!-- CTA (aparece tras revelar) -->
