--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 </head>
 <body>
 
-<div class="intro">Invéntate tu propia frase con estas palabras antes de abrir.</div>
+<div class="intro">Inventa tu frase con estas palabras antes de abrir.</div>
 <div class="grid" id="grid"></div>
 
 <!-- CTA (aparece tras revelar) -->
