--- a/public/index.html
+++ b/public/index.html
@@ -104,6 +104,9 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
     <span class="icon">📖</span>
     <!--<span class="txt">Abrí un<br>libro<br>físico</span> -->
   </button>
+    <button id="share">
+    <span class="icon">🔗</span>
+  </button>
 </div>
 
 <!-- Celebración -->
