--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,9 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 .cta .icon{font-size:1.55rem;margin-bottom:.15rem;line-height:1}
 #otro{background:linear-gradient(135deg,#5fbfff,#1e90ff);color:#fff}
 #fisico{background:linear-gradient(135deg,#b2f8c8,#42d97c);color:#0c2d1b}
+#share{background:linear-gradient(135deg,#ff8a00,#ff3d3d);color:#fff;
+}
+
 
 /* ---------------- Celebración ---------------- */
 .cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;align-items:center;justify-content:center;z-index:110}
