--- a/public/index.html
+++ b/public/index.html
@@ -120,6 +120,7 @@ const grid=document.getElementById("grid"),
       cta=document.getElementById("cta"),
       btnOtro=document.getElementById("otro"),
       btnLibro=document.getElementById("fisico"),
+      btnShare=document.getElementById("share"),
       cele=document.getElementById("cele"),
       celeMsg=document.getElementById("celeMsg");
 
