--- a/public/index.html
+++ b/public/index.html
@@ -69,9 +69,9 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 .cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);z-index:100;display:none;gap:0.8rem;justify-content:center;flex-wrap:wrap}
 
 .cta button{
-  width:clamp(3rem,10vw,4.6rem);
-  height:clamp(3rem,10vw,4.6rem);
-  flex:0 0 clamp(3rem,10vw,4.6rem);
+  width:clamp(3rem, min(7vw,7vh), 4rem);
+  height:clamp(3rem, min(7vw,7vh), 4rem);
+  flex:0 0 clamp(3rem, min(7vw,7vh), 4rem);
   border:none;
   border-radius:50%;
   display:flex;
@@ -83,6 +83,7 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
   transition:filter .25s,transform .25s;
   box-shadow:0 4px 10px rgba(0,0,0,.15);
 }
+
 
 .cta button:hover{filter:brightness(1.15);transform:translateY(-2px)}
 
