--- a/public/index.html
+++ b/public/index.html
@@ -99,6 +99,9 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 .cele-msg{font-family:'Poppins';font-size:2rem;text-align:center;background:rgba(255,255,255,.05);padding:2rem 3rem;border-radius:20px}
 .num{color:#30ffe4;font-weight:900;font-size:2.8rem}
 </style>
+
+<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+  
 </head>
 <body>
 
