--- a/public/index.html
+++ b/public/index.html
@@ -126,6 +126,23 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 <!-- Celebración -->
 <div class="cele" id="cele"><div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div></div>
 
+<!-- Tarjeta Triggui para compartir -->
+<div id="shareCard" style="display:none;
+  width:360px;height:640px;
+  background:linear-gradient(135deg,#191e32,#0e0f1b);
+  border-radius:24px;padding:20px;
+  display:flex;flex-direction:column;
+  justify-content:center;align-items:center;
+  font-family:'Archivo',sans-serif;color:#fff;">
+
+  <div style="font-size:2rem;font-weight:700;margin-bottom:1rem;">Somos</div>
+  <div id="shareNum" style="font-size:5rem;font-weight:900;color:#30ffe4;margin-bottom:1rem;">...</div>
+  <div style="font-size:1.4rem;font-weight:600;text-align:center;line-height:1.3;">
+    los que abrimos un libro físico<br>hoy con Triggui
+  </div>
+</div>
+
+  
 <script>
 const grid=document.getElementById("grid"),
       cta=document.getElementById("cta"),
