--- a/public/index.html
+++ b/public/index.html
@@ -99,9 +99,6 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 .cele-msg{font-family:'Poppins';font-size:2rem;text-align:center;background:rgba(255,255,255,.05);padding:2rem 3rem;border-radius:20px}
 .num{color:#30ffe4;font-weight:900;font-size:2.8rem}
 </style>
-
-<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
-  
 </head>
 <body>
 
@@ -126,23 +123,6 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 <!-- Celebración -->
 <div class="cele" id="cele"><div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div></div>
 
-<!-- Tarjeta Triggui para compartir -->
-<div id="shareCard" style="display:none;
-  width:360px;height:640px;
-  background:linear-gradient(135deg,#191e32,#0e0f1b);
-  border-radius:24px;padding:20px;
-  display:flex;flex-direction:column;
-  justify-content:center;align-items:center;
-  font-family:'Archivo',sans-serif;color:#fff;">
-
-  <div style="font-size:2rem;font-weight:700;margin-bottom:1rem;">Somos</div>
-  <div id="shareNum" style="font-size:5rem;font-weight:900;color:#30ffe4;margin-bottom:1rem;">...</div>
-  <div style="font-size:1.4rem;font-weight:600;text-align:center;line-height:1.3;">
-    los que abrimos un libro físico<br>hoy con Triggui
-  </div>
-</div>
-
-  
 <script>
 const grid=document.getElementById("grid"),
       cta=document.getElementById("cta"),
@@ -171,14 +151,7 @@ function buildPort(i){
   box.innerHTML=`<h2>${libro.titulo}</h2><p>${libro.autor}</p>`;
   const emoji=document.createElement("div");emoji.className="emoji-big";emoji.textContent=emojis[i%emojis.length];
   wrap.append(box,emoji);
-  if(isURL(libro.portada)){
-  const img=new Image();
-  img.src=libro.portada;
-  img.loading="lazy";
-  img.id="portada-img";   // 👈 clave para que btnShare lo encuentre
-  d.append(img);
-}
-
+  if(isURL(libro.portada)){d.append(Object.assign(new Image(),{src:libro.portada,loading:"lazy"}));}
   else{d.append(wrap);setTimeout(()=>adjustScale(wrap),0);}
   return d;
 }
@@ -215,57 +188,24 @@ function handle(card,i,port,label){
 
 btnOtro.onclick=()=>window.open("https://donate.stripe.com/9B66oJ8bI1E02U85aR24001","_blank");
 
-btnShare.onclick=async()=>{
-  try{
-    // 1. Obtener número actual del contador
-    const r=await fetch("https://triggui-api.vercel.app/api/get");
-    const d=await r.json();
-    const numTexto=`${d.total.toLocaleString("es-MX")} libros físicos abiertos`;
+btnShare.onclick=()=>{
+  const shareData={
+    title:"Triggui — Abre un libro físico",
+    text:`Estoy abriendo "${libro.titulo}" de ${libro.autor} con Triggui 📖✨`,
+    url:"https://app.triggui.com"
+  };
 
-    // 2. Preparar grid para captura (reemplazar portada por contador)
-    const portada=document.querySelector("#portada-img");
-    let backup=null;
-    if(portada){
-      backup=portada.style.display;
-      portada.style.display="none"; // ocultamos portada
-      const numDiv=document.createElement("div");
-      numDiv.id="portada-contador";
-      numDiv.style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100%;";
-      numDiv.innerHTML=`<div style="font-size:2rem;font-weight:900;color:#30ffe4;text-align:center;">${numTexto}</div>`;
-      portada.parentNode.append(numDiv);
-    }
-
-    // 3. Capturar grid completo
-    const gridEl=document.getElementById("grid");
-    const canvas=await html2canvas(gridEl,{backgroundColor:null});
-
-    // 4. Restaurar estado original
-    if(portada){
-      document.getElementById("portada-contador")?.remove();
-      portada.style.display=backup;
-    }
-
-    // 5. Compartir o fallback
-    canvas.toBlob(async(blob)=>{
-      const file=new File([blob],"triggui.png",{type:"image/png"});
-
-      // ✅ Android moderno: menú nativo
-      if(navigator.canShare && navigator.canShare({files:[file]})){
-        await navigator.share({
-          files:[file],
-          title:"Triggui — Abre un libro físico",
-          text:"Un impulso real. Nada más. Nada menos."
-        });
-      }else{
-        // ❌ iOS/desktop: abrir imagen en nueva pestaña
-        const url=URL.createObjectURL(blob);
-        window.open(url,"_blank");
-      }
-    });
-  }catch(err){
-    console.error("❌ Error al compartir:",err);
+  if(navigator.share){
+    navigator.share(shareData).catch(console.error);
+  }else{
+    const encoded=encodeURIComponent(`${shareData.text} ${shareData.url}`);
+    const fb=`https://www.facebook.com/sharer/sharer.php?u=${encodeURIComponent(shareData.url)}`;
+    const tw=`https://twitter.com/intent/tweet?text=${encoded}`;
+    const wa=`https://wa.me/?text=${encoded}`;
+    alert(`Comparte en:\n${fb}\n${tw}\n${wa}`);
   }
 };
+
   
 
 btnLibro.onclick=async()=>{
