--- a/public/index.html
+++ b/public/index.html
@@ -120,6 +120,15 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
   </button>
 </div>
 
+<!-- Overlay de tarjeta coleccionable -->
+<div id="tarjetaOverlay" style="display:none;
+  position:fixed;inset:0;z-index:999;
+  background:rgba(0,0,0,.85);align-items:center;justify-content:center;">
+  <div id="tarjetaCard" style="width:360px;height:560px;"></div>
+</div>
+
+
+  
 <!-- Celebración -->
 <div class="cele" id="cele"><div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div></div>
 
