--- a/public/index.html
+++ b/public/index.html
@@ -233,9 +233,17 @@ btnShare.onclick = () => {
   document.getElementById("tarjetaOverlay").style.display = "flex";
 };
 
+// 👉 NUEVO: abrir tarjeta también al hacer clic en la portada
+document.addEventListener("click", e => {
+  if (e.target.closest(".portada")) {
+    btnShare.click();
+  }
+});
+
 // cerrar overlay al tocar fuera
 document.getElementById("tarjetaOverlay").onclick = () =>
   document.getElementById("tarjetaOverlay").style.display = "none";
+
 
 
   
