--- a/public/index.html
+++ b/public/index.html
@@ -162,8 +162,16 @@ function buildPort(i){
   wrap.append(box,emoji);
   if(isURL(libro.portada)){d.append(Object.assign(new Image(),{src:libro.portada,loading:"lazy"}));}
   else{d.append(wrap);setTimeout(()=>adjustScale(wrap),0);}
+
+  // 👉 Nuevo: abrir tarjeta al hacer clic en la portada
+  d.addEventListener("click", e => {
+    e.stopPropagation(); // evita que llegue al card.onclick
+    btnShare.click();    // abre la tarjeta
+  });
+
   return d;
 }
+
 
 function render(){
   grid.innerHTML="";
