--- a/public/index.html
+++ b/public/index.html
@@ -264,9 +264,12 @@ btnShare.onclick = () => {
     <div style="font:14px/1.5 ${t.style.serif};flex:1;margin-bottom:12px;">
       ${t.parrafoBot}
     </div>
-    <div style="text-align:center;font:12px ${t.style.sans};">
-      app.triggui.com
-    </div>
+    <div style="text-align:center; margin-top:12px;">
+  <img src="https://raw.githubusercontent.com/badirnakid/triggui-app/main/public/trigguiletras2.png" 
+       alt="Triggui" 
+       style="max-width:120px; width:100%; height:auto; display:block; margin:0 auto; opacity:.9;">
+</div>
+
   `;
 
   document.getElementById("tarjetaOverlay").style.display = "flex";
