--- a/public/index.html
+++ b/public/index.html
@@ -268,8 +268,9 @@ btnShare.onclick = () => {
     </div>
     <div style="text-align:center; margin-top:12px;">
   <img src="https://raw.githubusercontent.com/badirnakid/triggui-app/main/public/trigguiletras2.png" 
-       alt="Triggui" 
-       style="max-width:90px; width:100%; height:auto; display:block; margin:0 auto; opacity:.9;">
+     alt="Triggui" 
+     style="max-width:22%; max-height:40px; height:auto; display:block; margin:0 auto; opacity:.9;">
+
 </div>
 
   `;
