--- a/public/index.html
+++ b/public/index.html
@@ -112,6 +112,23 @@ html, body {
 .cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;align-items:center;justify-content:center;z-index:110}
 .cele-msg{font-family:'Poppins';font-size:2rem;text-align:center;background:rgba(255,255,255,.05);padding:2rem 3rem;border-radius:20px}
 .num{color:#30ffe4;font-weight:900;font-size:2.8rem}
+
+#tarjetaCard {
+  font-size: clamp(12px, 1.6vw, 16px);
+  line-height: 1.45;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+#tarjetaCard img {
+  max-width: 25%;
+  max-height: 38px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  opacity: .9;
+}
+
+  
 </style>
 </head>
 <body>
