--- a/public/index.html
+++ b/public/index.html
@@ -128,6 +128,11 @@ html, body {
   opacity: .9;
 }
 
+/* 🔑 Tarjeta más alta solo en WebView */
+body.webview #tarjetaCard {
+  height: 600px !important; /* antes era 560px */
+}
+  
   
 </style>
 </head>
