--- a/public/index.html
+++ b/public/index.html
@@ -274,6 +274,24 @@ function handle(card,i,port,label){
 
 btnOtro.onclick=()=>window.open("https://donate.stripe.com/9B66oJ8bI1E02U85aR24001","_blank");
 
+// ===== CONTRASTE SEGURO =====
+function luminance(hex) {
+  try {
+    const c = hex.replace("#","").match(/.{1,2}/g).map(x=>parseInt(x,16)/255);
+    const f = v => v<=.03928 ? v/12.92 : Math.pow((v+.055)/1.055,2.4);
+    return 0.2126*f(c[0])+0.7152*f(c[1])+0.0722*f(c[2]);
+  } catch {
+    return 0; // fallback seguro
+  }
+}
+
+function pickTextColor(bg) {
+  try { return luminance(bg) > 0.35 ? "#000" : "#fff"; }
+  catch { return "#fff"; }
+}
+
+  
+
 btnShare.onclick = () => {
   const t = libro.tarjeta;
   const card = document.getElementById("tarjetaCard");
