--- a/public/index.html
+++ b/public/index.html
@@ -296,18 +296,52 @@ btnShare.onclick = () => {
   const t = libro.tarjeta;
   const card = document.getElementById("tarjetaCard");
 
+  // Fallbacks seguros
+  const safePaper  = t.style.paper  || "#111111";
+  const safeInk    = t.style.ink    || pickTextColor(safePaper);
+  const safeBorder = t.style.border || "#666";
+  const safeSerif  = t.style.serif  || "Georgia, serif";
+  const safeSans   = t.style.sans   || "Arial, sans-serif";
+
   card.style = `
     width:360px;height:560px;
-    background:${t.style.paper};
-    color:${t.style.ink};
-    border:2px solid ${t.style.border};
+    background:${safePaper};
+    color:${pickTextColor(safePaper)};
+    border:2px solid ${safeBorder};
     border-radius:20px;
     padding:16px;
-    font-family:${t.style.serif};
+    font-family:${safeSerif};
     display:flex;flex-direction:column;justify-content:space-between;
-    font-size:clamp(12px, 1.8vw, 16px); /* 🔑 asegura tamaño estable */
+    font-size:clamp(12px, 1.8vw, 16px);
+    line-height:1.5;
     box-sizing:border-box;
   `;
+
+  card.innerHTML = `
+    <div style="font:700 20px ${safeSerif};margin-bottom:8px;">
+      ${libro.titulo} · ${libro.autor}
+    </div>
+    <div style="font:14px/1.5 ${safeSerif};margin-bottom:12px;">
+      ${t.parrafoTop}
+    </div>
+    <div style="font:600 14px ${safeSans};color:${t.style.accent || "#30ffe4"};margin-bottom:8px;">
+      ${t.subtitulo}
+    </div>
+    <div style="font:14px/1.5 ${safeSerif};flex:1;margin-bottom:12px;">
+      ${t.parrafoBot}
+    </div>
+    <div style="text-align:center; margin-top:12px;">
+      <img src="https://raw.githubusercontent.com/badirnakid/triggui-app/main/public/trigguiletras2.png" 
+           alt="Triggui" 
+           style="max-width:22%; max-height:40px; height:auto; display:block; margin:0 auto; opacity:.9;">
+    </div>
+  `;
+
+  document.getElementById("tarjetaOverlay").style.display = "flex";
+};
+
+
+  
 
 
   card.innerHTML = `
