--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@ body.webview #tarjetaCard {
 </head>
 <body>
 
-<div class="intro">Inventa tu frase con estas palabras antes de abrir.</div>
+<div class="intro">Toca bloques uno revela el libro.</div>
 <div class="grid" id="grid"></div>
 
 <!-- CTA (aparece tras revelar) -->
