--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 }
 
 *{margin:0;padding:0;box-sizing:border-box}
-html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:#fff;-webkit-overflow-scrolling:touch}
+html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;background-color:#0e0f1b;color:#fff;-webkit-overflow-scrolling:touch}
 
 /* 🔑 Evita que WebView escale el texto automáticamente */
 html, body {
