--- a/public/index.html
+++ b/public/index.html
@@ -134,6 +134,14 @@ body.webview #tarjetaCard {
   font-size: clamp(16px, 2.4vw, 20px); /* un pelín más compacto */
 }
 
+body.webview {
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: #0e0f1b;
+}
   
   
 </style>
