--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,7 @@ body.webview {
   
 </style>
 </head>
-<body>
+<body style="background:#0e0f1b;">
 
 <div class="intro">Toca. Un libro te abrirá.</div>
 <div class="grid" id="grid"></div>
